--- a/dash/src/components/Sidebar/Sidebar.css
+++ b/dash/src/components/Sidebar/Sidebar.css
@@ -14,6 +14,7 @@
     gap: 1rem;
     align-items: center;
     justify-content: center;
+    /* height: 4%; */
 }
 
 .logo>img {
@@ -37,6 +38,34 @@
     display: flex;
     align-items: center;
     gap: 1rem;
+    height: 2.5rem;
+    margin-left: 2rem;
+    position: relative;
+    transition: all 300ms ease;
     font-size: 1rem;
+    border-radius: 0.7rem;
 }
 
+.menu-item:hover {
+    cursor: pointer;
+}
+
+.active {
+    background: #f799a354;
+    margin-left: 0;
+    
+}
+
+.active::before {
+    content: "";
+    width: 8px;
+    height: 100%;
+    background: #ff919d;
+    margin-right: calc(1rem - 8px)
+}
+
+.menu .menu-item:last-child {
+    position: absolute;
+    bottom: 2.3rem;
+    width: 100%;
+}
