--- a/dash/src/App.css
+++ b/dash/src/App.css
@@ -20,6 +20,15 @@
   border-radius: 2rem;
   background-color: rgba(255, 255, 255, 0.54);
   overflow: hidden;
-  grid-template-columns: 11rem auto 20rem;
+  grid-template-columns: 18rem auto 40rem;
 }
 
+h1 {
+  font-weight: bold;
+  font-size: 3rem;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 2.1rem;
+}
