--- a/dash/src/components/MainDash/MainDash.css
+++ b/dash/src/components/MainDash/MainDash.css
@@ -2,9 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-}
-
-.main-dash>h1 {
-    font-weight: bold;
-    font-size: 3rem;
+    height: 70%;
+    margin-left: 1.5rem;
+    padding: 0 4rem;
 }
