--- a/dash/src/components/MainDash/MainDash.css
+++ b/dash/src/components/MainDash/MainDash.css
@@ -3,6 +3,6 @@
     flex-direction: column;
     justify-content: space-evenly;
     height: 70%;
-    margin-left: 1.5rem;
+    margin: 0 1.5rem;
     padding: 0 4rem;
 }
