--- a/dash/src/App.css
+++ b/dash/src/App.css
@@ -19,7 +19,7 @@
   width: 97%;
   border-radius: 2rem;
   background-color: rgba(255, 255, 255, 0.54);
-  overflow: hidden;
+  overflow: scroll;
   grid-template-columns: 18rem auto 40rem;
 }
 
@@ -31,4 +31,10 @@ h1 {
 h2 {
   font-weight: bold;
   font-size: 2.1rem;
+}
+
+h3 {
+  font-weight: 500;
+  font-size: 1.5rem;
+  margin: 0.5rem 0;
 }
