--- a/dash/src/components/Updates/Updates.css
+++ b/dash/src/components/Updates/Updates.css
@@ -1,6 +1,6 @@
 .update {
     margin: 0.5rem 0;
-    width: 85%;
+    /* width: 85%; */
     background: #fff;
     border-radius: 0.7rem;
     padding: 1rem;
