--- a/dash/src/components/CardContainer/CardContainer.css
+++ b/dash/src/components/CardContainer/CardContainer.css
@@ -1,6 +1,6 @@
 .card-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     gap: 1rem;
     width: 100%;
 }
