--- a/dash/src/components/RightPanel/RightPanel.css
+++ b/dash/src/components/RightPanel/RightPanel.css
@@ -3,5 +3,5 @@
     display: flex;
     flex-direction: column;
     padding-top: 2rem;
-    /* justify-content: space-evenly; */
+    margin-bottom: 2rem;
 }
