--- a/dash/src/components/Sidebar/Sidebar.css
+++ b/dash/src/components/Sidebar/Sidebar.css
@@ -53,7 +53,6 @@
 .active {
     background: #f799a354;
     margin-left: 0;
-    
 }
 
 .active::before {
@@ -68,4 +67,59 @@
     position: absolute;
     bottom: 5rem;
     width: 100%;
+}
+
+@media screen and (max-width: 1200px) {
+    .menu-item>span {
+        display: none;
+    }
+    .logo {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .sidebar {
+        position: absolute;
+        bottom: 0;
+        display: flex;
+        flex-direction: row;
+        width: 100vw;
+        height: 5rem;
+        padding: 0 0 0.5rem 0;
+        background-color: #ff919d;
+        opacity: 1;
+    }
+    .menu {
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        z-index: 9;
+        margin: 0;
+        gap: 0;
+        width: 80vw;
+        justify-content: space-between;
+        align-items: flex-end;
+    }
+    .active {
+        background-color: #ffe1bc;
+        margin-left: 2rem;
+        margin-bottom: 1rem;
+    }
+    .active::before {
+        display: none;
+    }
+
+    .menu .menu-item:last-child {
+        position: absolute;
+        bottom: 0;
+        right: -90vw;
+    }
+    .menu-item>span {
+        display: none;
+    }
+    .logo {
+        display: none;
+    }
+
 }
