--- a/dash/src/components/CustomerReviews/CustomerReviews.css
+++ b/dash/src/components/CustomerReviews/CustomerReviews.css
@@ -1,3 +1,13 @@
 .customer-reviews {
     margin-top: 2rem;
 }
+
+@media screen and (max-width: 1200px) {
+    .customer-reviews>h3:last-of-type {
+        display: none;
+    }
+
+    .customer-reviews>div:last-of-type {
+        display: none;
+    }
+}
