--- a/dash/src/components/MainDash/MainDash.css
+++ b/dash/src/components/MainDash/MainDash.css
@@ -6,3 +6,18 @@
     margin: 0 1.5rem;
     padding: 0 2rem;
 }
+
+@media screen and (max-width: 1200px) {
+    .main-dash {
+        justify-content: flex-start;
+        margin-top: 2rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+  .main-dash {
+      width: 100%;
+      margin: 0;
+      padding: 0.5rem;
+  }
+}
