--- a/dash/src/components/Table/Table.css
+++ b/dash/src/components/Table/Table.css
@@ -24,3 +24,17 @@
     padding: 8px;
     border-radius: 9px;
 }
+
+@media screen and (max-width: 1200px) {
+    .MuiTableRow-root>* {
+        padding: 0.75rem 0.2 !important;
+    }
+    .table {
+        width: 90vw;
+    }
+
+    .table td, th {
+        font-size: 0.9rem !important;
+        width: auto;
+    }
+}
