--- a/dash/src/App.css
+++ b/dash/src/App.css
@@ -54,6 +54,8 @@ h3 {
     display: flex;
     flex-direction: column;
     width: 98vw;
+    border-radius: 0;
+    height: 100%;
   }
   .app-glass-wrapper::-webkit-scrollbar {
     display: none;
