--- a/dash/src/components/Sidebar/Sidebar.css
+++ b/dash/src/components/Sidebar/Sidebar.css
@@ -82,9 +82,10 @@
     .sidebar {
         position: absolute;
         bottom: 0;
+        left: 0;
         display: flex;
         flex-direction: row;
-        width: 100vw;
+        width: 100vw !important;
         height: 5rem;
         padding: 0 0 0.5rem 0;
         background-color: #ff919d;
