--- a/dash/src/components/CardContainer/CardContainer.css
+++ b/dash/src/components/CardContainer/CardContainer.css
@@ -3,6 +3,7 @@
     justify-content: space-evenly;
     gap: 1rem;
     width: 100%;
+    padding-top: 1rem;
 }
 
 @media screen and (max-width: 1200px) {
