--- a/dash/src/components/MainDash/MainDash.css
+++ b/dash/src/components/MainDash/MainDash.css
@@ -1,23 +1,10 @@
-.main-dash {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    height: 95%;
-    margin: 0 1.5rem;
-    padding: 0 2rem;
-}
-
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 1201px) {
     .main-dash {
-        justify-content: flex-start;
-        margin-top: 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        height: 95%;
+        margin: 0 1.5rem;
+        padding: 0 2rem;
     }
-}
-
-@media screen and (max-width: 768px) {
-  .main-dash {
-      width: 100%;
-      margin: 0;
-      padding: 0.5rem;
-  }
 }
