--- a/dash/src/components/RightPanel/RightPanel.css
+++ b/dash/src/components/RightPanel/RightPanel.css
@@ -2,6 +2,6 @@
     width: 95%;
     display: flex;
     flex-direction: column;
-    padding-top: 2rem;
-    margin-bottom: 2rem;
+    padding: 2rem 0 0 2rem;
+    margin-bottom: 3rem;
 }
