--- a/dash/src/components/Sidebar/Sidebar.css
+++ b/dash/src/components/Sidebar/Sidebar.css
@@ -14,7 +14,6 @@
     gap: 1rem;
     align-items: center;
     justify-content: center;
-    /* height: 4%; */
 }
 
 .logo>img {
@@ -86,7 +85,7 @@
         display: flex;
         flex-direction: row;
         width: 100vw !important;
-        height: 5rem;
+        height: 5rem !important;
         padding: 0 0 0.5rem 0;
         background-color: #ff919d;
         opacity: 1;
@@ -95,7 +94,7 @@
         display: flex;
         flex-direction: row;
         position: relative;
-        z-index: 9;
+        z-index: 9999 !important;
         margin: 0;
         gap: 0;
         width: 80vw;
