--- a/dash/src/components/Sidebar/Sidebar.css
+++ b/dash/src/components/Sidebar/Sidebar.css
@@ -79,22 +79,22 @@
 
 @media screen and (max-width: 768px) {
     .sidebar {
-        position: absolute;
+        position: fixed;
         bottom: 0;
         left: 0;
         display: flex;
         flex-direction: row;
         width: 100vw !important;
-        height: 5rem !important;
+        height: 7vh !important;
         padding: 0 0 0.5rem 0;
         background-color: #ff919d;
         opacity: 1;
+        z-index: 10;
     }
     .menu {
         display: flex;
         flex-direction: row;
         position: relative;
-        z-index: 9999 !important;
         margin: 0;
         gap: 0;
         width: 80vw;
